manifest-apachetest.yaml
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: webtest
  labels:
    app: apache
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: php-apache
        image: httpd:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: webtest
  labels:
    app: apache
    stack: logging
spec:
  type: NodePort
  ports:
  - name: "web"
    port: 80
    nodePort: 33080
    targetPort: 80
  selector:
    app: apache
---
