manifest-elasticsearch.yaml
---
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: elk
  labels:
    app: elasticsearch
    stack: logging
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: elasticsearch
        stack: logging
    spec:
      serviceAccountName: elasticsearch
      containers:
      - name: elasticsearch
        image: elasticsearch:7.3.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9200
        resources:
          limits:
            memory: "2147483648"
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/elasticsearch.yml
          subPath: elasticsearch.yml
        - name: data
          mountPath: /usr/share/elasticsearch/data
      # Allow non-root user to access PersistentVolume
      securityContext:
        fsGroup: 1000
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: elasticsearch
      - name: data
        persistentVolumeClaim:
          claimName: elasticsearch
      # - name: data
      #   hostPath:
      #     path: /srv/elasticsearch-data
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elk
  labels:
    app: elasticsearch
    stack: logging
spec:
  type: NodePort
  selector:
    app: elasticsearch
    stack: logging
  ports:
    - port: 9200
      name: web
      protocol: TCP
      nodePort: 33200
---
########################################################################################################################################################################################
# Create an internal ClusterIP Service for the Elasticsearch server listening on ports 9200 and 9330 redirects to the Elasticsearch containers on port 9200 and 9300.
########################################################################################################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-int
  namespace: elk
  labels:
    app: elasticsearch
    stack: logging
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
    stack: logging
  ports:
    - protocol: TCP
      name: http
      port: 9200
      targetPort: 9200
    - protocol: TCP
      name: transport
      port: 9300
      targetPort: 9300
---
