manifest-ingressrules.yaml
### Ingress rules for Nginx
#---
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: kibana
#  namespace: elk
#  labels:
#    app: kibana
#    stack: logging
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/part-of: ingress-nginx
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /
#        backend:
#          serviceName: kibana-internal-svc
#          servicePort: 5601

### Ingress rules for Istio
---
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oreilly-ecom
  namespace: elk
spec:
  hosts:
  - "ost-ucp-kibana.oreillyauto.com"
  gateways:
  - oreilly-kibana-gateway
  http:
  - match:
    headers:
      request:
        set:
          X-Forwarded-Proto: "https"
      response:
        set:
          Content-Security-Policy: " default-src 'self' https://*.oreillyauto.com ; img-src 'self' data: https://*.oreillyauto.com https://*.google-analytics.com https://*.gstatic.com https://stats.g.doubleclick.net https://*.bluekai.com https://*.crwdcntrl.net https://*.googleapis.com https://*.googletagmanager.com https://www.facebook.com https://*.bazaarvoice.com https://oreilly.hosted.strongview.com https://img.youtube.com https://www.google.com https://*.twitter.com https://*.twimg.com http [...]
          X-Frame-Options: "DENY"
          Strict-Transport-Security: "max-age=31536000 ; includeSubDomains"
          X-XSS-Protection: "1; mode=block"
          X-Content-Type-Options: "nosniff"
    route:
    - destination:
        port:
          number: 5601
        host: kibana
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: oreilly-kibana-gateway
  namespace: elk
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "ost-ucp-kibana.oreillyauto.com"
